# mt-auth-service

./: .env  .gitignore  Cargo.toml  Dockerfile  diesel.toml  project_structure.txt
.github/workflows/: ci-cd.yml  deploy.yml
k8s/: deployment.yaml
migrations/2024-11-26-173859_create_users/: up.sql
migrations/2024-11-27-091422_CREATE_USERS_AND_REPORTING/: up.sql
migrations/2024-12-12-150233_update_machines_service_history/: up.sql
src/: database.rs  lib.rs  main.rs  schema.rs
src/controllers/: machine_controller.rs  mod.rs  notify_controller.rs  response.rs  user_controller.rs
src/models/: login.rs  machine.rs  mod.rs  notify_machine.rs  register.rs
src/models/login/: request.rs
src/models/register/: request.rs  response.rs
src/repositories/: machine_repository.rs  mod.rs  user_repository.rs
src/services/: machine_service.rs  mod.rs  notify_service.rs  user_service.rs
src/services/login/: mod.rs
src/services/register/: mod.rs
src/utils/: crypt.rs
